####################
Bazaar Release Notes
####################

.. contents:: List of Releases
   :depth: 1

bzr 2.2.2
#########

:2.2.2: NOT RELEASED YET

Compatibility Breaks
********************

New Features
************

Bug Fixes
*********

* Correctly set the Content-Type  header when http POSTing to comply
  with stricter web frameworks. (Vincent Ladeuil, #655100)

* ``NotBranchError`` no longer allows errors from calling
  ``bzrdir.open_repository()`` to propagate.  This is unhelpful at best,
  and at worst can trigger infinite loops in callers.  (Andrew Bennetts)
  
* Skip tests that needs a bzr source tree when there isn't one. This is
  needed to succesfully run the test suite for installed versions.
  (Vincent Ladeuil, #644855).

* Skip the tests that requires respecting the chmod bits when running as
  root. Including the one that wasn't present in 2.1.
  (Vincent Ladeuil, #646133)

* Using bzr with `lp:` urls behind an http proxy should work.
  (Robert Collins, #558343)

* Windows installers no longer requires the Microsoft vcredist to be
  installed.
  (Martin [gz], Gary van der Merwe, #632465)

Improvements
************

Documentation
*************

API Changes
***********

Internals
*********

Testing
*******

* Add ``tests/ssl_certs/ca.crt`` to the required test files list. Test
  involving the pycurl https test server fail otherwise when running
  selftest from an installed version. (Vincent Ladeuil, #651706)

* Fix tests that failed when run under ``LANG=C``.
  (Andrew Bennetts, #632387)


bzr 2.2.1
#########

:2.2.1: 2010-09-17

This is a bugfix release which also includes bugfixes from 2.0.6 and
2.1.3. None are critical, but upgrading is recommended for all users on
earlier 2.2 releases.

Bug Fixes
*********

* Additional merges after an unrelated branch has been merged with its
  history no longer crash when deleted files are involved.
  (Vincent Ladeuil, John Arbash Meinel, #375898)
